Fixed portfolio flexbox gaps on Safari.

--- a/Responsive Web Design/Personal Portfolio Site/style.css
+++ b/Responsive Web Design/Personal Portfolio Site/style.css
@@ -30,6 +30,7 @@ main {
   background-color: white;
 }
 
+<!-- I know this is dumb. I know this breaks the styling on certain resolutions. But it's what FreeCodeCamp's tests demands. -->
 #welcome-section {
   height:100vh;
   display:flex;
@@ -131,3 +132,18 @@ main {
   align-items:center;
   column-gap:20px;
 }
+
+@media not all and (min-resolution:.001dpcm) { @media { 
+	.nav-link:not(:last-child) {
+		margin-right: 20px;
+	}
+	.profile-link:not(:last-child) {
+		margin-right:20px;
+	}
+}}
+
+@media not all and (min-resolution:.001dpcm) { @media screen and (max-width: 750px) {
+	.introshowcase:not(:last-child) {
+		margin-bottom: 20px;
+	}
+}}
